--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,11 @@
   "name": "portifolio",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.5.0",
-    "angular-route": "~1.5.0",
-    "angular-loader": "~1.5.0",
-    "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0",
-    "bootstrap": "^3.3.7",
-    "angular-material": "^1.1.1",
-    "angular-bootstrap": "^2.1.3"
+    "angular": "^1.4.0",
+    "angular-route": "^1.5.0",
+    "bootstrap": "^3.2.0",
+      "angular-material": "^1.1.1",
+     "angular-bootstrap": "^2.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
